docs/ru/ride/v4/functions/built-in-functions/math-functions.md
# [Ride v4 и v3] Математические функции

:warning: Это документация Стандартной библиотеки версии 4 и 3. Рекомендуем использовать версию 5. [Перейти к&nbsp;версии&nbsp;5](/ru/ride/v4/functions/built-in-functions/math-functions)

| Название | Описание | Сложность |
| :--- | :--- | :--- |
| [fraction](#fraction) | Умножает два целых числа и делит на третье без переполнения | 1 |
| [log](#log) | Вычисляет логарифм числа по заданному основанию | 100 |
| [median](#median) | Возвращает медиану списка целых чисел | 20 |
| [pow](#pow) | Возводит число в степень | 100 |

## fraction

Умножает [целые числа](/ru/ride/v4/data-types/int) `a` и `b` и делит на целое число `c` без переполнения.

Результат `a × b / c` не должен превышать максимальное целочисленное значение 9&nbsp;223&nbsp;372&nbsp;036&nbsp;854&nbsp;755&nbsp;807.

```ride
fraction(a: Int, b: Int, c: Int): Int
```

### Параметры

| Параметр | Описание |
| :--- | :--- |
| `a`: Int | Целое `a` |
| `b`: Int | Целое `b` |
| `c`: Int | Целое `c` |

### Примеры

Пусть:

a = 100&nbsp;000&nbsp;000&nbsp;000,

b = 50&nbsp;000&nbsp;000&nbsp;000&nbsp;000,

c = 2&nbsp;500&nbsp;000.

Следующее выражение с [операторами](/ru/ride/v4/operators/) `*` and `/` вызывает ошибку переполнения:

```ride
a × b /c # ошибка, поскольку a × b превышает максимальное целочисленное значение
```

Использование функции `fraction` не приводит к переполнению:

```ride
fraction(a, b, c) # Результат: 2 000 000 000 000 000 000
```

## log

Вычисляет `log`<sub>`b`</sub>`a`.

``` ride
log(value: Int, ep: Int, base: Int, bp: Int, rp: Int, round: UP|DOWN|CEILING|FLOOR|HALFUP|HALFDOWN|HALFEVEN): Int
```

В Ride нет [типа данных](/ru/ride/v4/data-types/) с плавающей точкой. Поэтому, чтобы вычислить `log`<sub>2,7</sub>16,25, нужно указать `value` = 1625, `vp` = 2 и `base` = 27, `bp` = 1.

Еще примеры:

| a | value | vp |
| :--- | :--- | :--- |
| 16,25 | 1625 | 2 |
| 5 | 5 | 0 |
| 5,00 | 500 | 2 |

Если функция `log` возвращает, например, 2807, а параметр `rp` = 3, это значит, что результат вычисления равен 2,807; в числе 2807 последние 3 цифры — дробная часть.

| Параметр | Описание |
| :--- | :--- |
| `value`: [Int](/ru/ride/v4/data-types/int) | Число `a` без десятичной точки |
| `vp`: [Int](/ru/ride/v4/data-types/int) | Количество знаков после запятой у `a` |
| `base`: [Int](/ru/ride/v4/data-types/int) | Основание логарифма `b` без десятичной точки |
| `bp`: [Int](/ru/ride/v4/data-types/int) | Количество знаков после запятой у `b` |
| `rp`: [Int](/ru/ride/v4/data-types/int) | Количество знаков после запятой у результата, от 0 до 8 включительно. Задает точность вычисления |
| `round`: UP&#124;DOWN&#124;CEILING&#124;FLOOR&#124;HALFUP&#124;HALFDOWN&#124;HALFEVEN | Одна из [переменных округления](#rounding-variables) |

### Примеры

`log`<sub>2,7</sub>16,25 = 2,807035421...

```ride
log(1625, 2, 27, 1, 2, HALFUP) # Функция возвращает 281, поэтому результат: 2.81
log(1625, 2, 27, 1, 5, HALFUP) # Функция возвращает 280703542, поэтому результат: 2.80704
```

```ride
log(0, 0, 2, 0, 0, HALFUP)     # Результат: -Infinity
```

## median

Возвращает медиану [списка](/ru/ride/v4/data-types/list) целых чисел. Список не может быть пустым, иначе скрипт завершится с ошибкой.

> Функция `median` добавлена в [Стандартной библиотеке](/ru/ride/script/standard-library) версии 4.

``` ride
median(arr: List[Int]): Int
```

### Параметры

| Параметр | Описание |
| :--- | :--- |
| `arr`: List[Int] | Список целых чисел |

### Примеры

```ride
median([1, 2, 3]) # Возвращает 2
median([2, 4, 9, 20]) # Возвращает 6
median([-2, -4, -9, -20]) # Возвращает -7
```

## pow

Вычисляет `a`<sup>`b`</sup>.

``` ride
pow(base: Int, bp: Int, exponent: Int, ep: Int, rp: Int, round: UP|DOWN|CEILING|FLOOR|HALFUP|HALFDOWN|HALFEVEN): Int
```

В Ride нет [типа данных](/ru/ride/v4/data-types/) с плавающей точкой. Поэтому, чтобы вычислить 16,25<sup>2,7</sup>, нужно указать `base` = 1625, `bp` = 2 и `exponent` = 27, `ep` = 1.

Если функция `pow` возвращает, например, 18591057, а параметр `rp` = 4, это значит, что результат вычисления равен 1859,1057; в числе 18591057 последние 4 цифры — дробная часть.

### Параметры

| Parameter | Description |
| :--- | :--- |
| `base`: [Int](/ru/ride/v4/data-types/int) | Число `a` без десятичной точки |
| `bp`: [Int](/ru/ride/v4/data-types/int) | Количество знаков после запятой у `a` |
| `exponent`: [Int](/ru/ride/v4/data-types/int) | Показатель степени `b` без десятичной точки |
| `ep`: [Int](/ru/ride/v4/data-types/int) | Количество знаков после запятой у `b` |
| `rp`: [Int](/ru/ride/v4/data-types/int) | Количество знаков после запятой у результата, от 0 до 8 включительно. Задает точность вычисления |
| `round`: UP&#124;DOWN&#124;CEILING&#124;FLOOR&#124;HALFUP&#124;HALFDOWN&#124;HALFEVEN | Одна из [переменных округления](#rounding-variables) |

### Примеры

16.25<sup>2.7</sup> = 1859,1057168...

```ride
pow(1625, 2, 27, 1, 2, HALFUP) # function returns 185911, so the result is: 1859.11
pow(1625, 2, 27, 1, 5, HALFUP) # function returns 185910572, so, the result is: 1859.10572
```

## Переменные округления<a id="rounding-variables"></a>

Переменные округления соответствуют [методам округления](https://ru.wikipedia.org/wiki/Округление).

Переменные округления используются _только_ в качестве параметров функций [log](#log) и [pow](#pow).

| Название | Описание |
| :--- | :--- |
| CEILING | Округление вверх (к положительной бесконечности) |
| DOWN | Округление к меньшему по модулю (к нулю) |
| FLOOR | Округление вниз (к отрицательной бесконечности) |
| HALFDOWN | Округление к ближайшему целому, ±0,5 округляется к меньшему по модулю |
| HALFEVEN | Округление к ближайшему четному числу |
| HALFUP | Округление к ближайшему целому, ±0,5 округляется к большему по модулю |
| UP | Округление к большему по модулю (от нуля) |

### Примеры

| Число/Метод округления | UP | DOWN | CEILING | FLOOR | HALFUP | HALFDOWN | HALFEVEN |
| :--- | :--- | :--- | :--- | :--- | :--- | :--- | :--- |
| 5.5 | 6 | 5 | 6 | 5 | 6 | 5 | 6 |
| 2.5 | 3 | 2 | 3 | 2 | 3 | 2 | 2 |
| 1.6 | 2 | 1 | 2 | 1 | 2 | 2 | 2 |
| 1.1 | 2 | 1 | 2 | 1 | 1 | 1 | 1 |
| 1.0 | 1 | 1 | 1 | 1 | 1 | 1 | 1 |
| -1.0 | -1 | -1 | -1 | -1 | -1 | -1 | -1 |
| -1.1 | -2 | -1 | -1 | -2 | -1 | -1 | -1 |
| -1.6 | -2 | -1 | -1 | -2 | -2 | -2 | -2 |
| -2.5 | -3 | -2 | -2 | -3 | -3 | -2 | -2 |
| -5.5 | -6 | -5 | -5 | -6 | -6 | -5 | -6 |
